Drei Orbit Controls implemented, fixed shifting on state change, Zustand State Manager implemented

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
 }
 
 #box-icon-box {
+  color: white;
   position:absolute;
   bottom:5px;
   right:5px;
